tests/ui/associated-type-bounds/dedup-normalized-2-higher-ranked.current.stderr
error[E0283]: type annotations needed
  --> $DIR/dedup-normalized-2-higher-ranked.rs:28:5
   |
LL |     impls(rigid);
   |     ^^^^^ ----- type must be known at this point
   |     |
   |     cannot infer type of the type parameter `U` declared on the function `impls`
   |
   = note: cannot satisfy `for<'b> <P as Trait>::Rigid: Bound<'b, _>`
note: required by a bound in `impls`
  --> $DIR/dedup-normalized-2-higher-ranked.rs:25:13
   |
LL | fn impls<T: for<'b> Bound<'b, U>, U>(_: T) {}
   |             ^^^^^^^^^^^^^^^^^^^^ required by this bound in `impls`
help: consider specifying the generic arguments
   |
LL |     impls::<<P as Trait>::Rigid, U>(rigid);
   |          ++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
